tests/errors/literals/literal-non-builtin-param.fn
---
Description: Literal declared with a non-builtin parameter type
Expected: compile error
---

type Other
{
    init{}
}

type BadLiteral
{
    init{}

    literal also_nope(value: Other) {}
}

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
